--- a/management/templates/management/sidebar.html
+++ b/management/templates/management/sidebar.html
@@ -39,6 +39,8 @@
       <a href="/management/attendance-record" class="list-group-item list-group-item-action">Attendance Record </a>
       <a href="/management/leave-information" class="list-group-item list-group-item-action">Leave Information</a>
       <a href="/management/add-result" class="list-group-item list-group-item-action">Add Results</a>
+      <a href="/management/result-information" class="list-group-item list-group-item-action">Result Information</a>
+
       
     {% else %}
       {% if request.user.userprofile.role == "teacher" %}
