--- a/management/templates/management/base.html
+++ b/management/templates/management/base.html
@@ -1,17 +1,20 @@
 <!doctype html>
 <html lang="en">
-{% load static %}
- 
+ 		{% load static %}
+
 	<head>
   	<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width	initial-scale=1">
-		
+		<script type="text/javascript" src="{% static 'js/ajax.js'%}"></script>
   	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
   	<link rel="stylesheet" type="text/css" href="{% static 'css/all.min.css' %}">
   		<!-- link style.css -->
 		<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-		<script type="text/javascript" src="{% static 'js/script.js'%}"></script>
+
+		
+
+
 
 		<title>{% block title %} {% endblock %}</title>
 	</head>
@@ -108,11 +111,10 @@ footer {
 <script type="text/javascript" src="{% static 'js/bootstrap.min.js'%}"></script>
 <script type="text/javascript" src="{% static 'js/all.min.js'%}"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="jquery-3.5.1.min.js"></script>
+
 
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <!-- Popper JS -->
-
 <script type="text/javascript">
 	{% if messages %}			
 	{% for message in messages %}
@@ -122,6 +124,7 @@ footer {
 </script>
 {% block javascript %}
 {% endblock javascript %}
+
 
 	</body>
 </html>
